--- a/app/views/default/home/index.html
+++ b/app/views/default/home/index.html
@@ -183,10 +183,10 @@
         </div>
         <div class="row">
             <?php 
-            if (!is_null($data['list_bantuan'])) {
+            if (!is_null($data['list_bantuan']['data'])) {
                 $delay_card = 0.2;
                 $time_card = 0.2;
-                foreach($data['list_bantuan'] as $list_bantuan) { 
+                foreach($data['list_bantuan']['data'] as $list_bantuan) { 
                     $delay_card = $delay_card + $time_card; 
             ?>
                     <div class="col-lg-4 col-md-6 col-12 wow fadeInUp" data-wow-delay="<?= $delay_card.'s'; ?>">
@@ -225,6 +225,18 @@
             } 
             ?>
         </div>
+        <?php 
+            if ($data['list_bantuan']['load_more'] == 'true') {
+                    $delay_card = $delay_card + $time_card; 
+                ?>
+                <div class="row mt-5">
+                    <div class="col-12 text-center wow fadeInUp" data-wow-delay="<?= $delay_card.'s'; ?>">
+                        <a href="javascript:;" class="btn btn-primary rounded-box py-3 px-5" id="load-more" data-offset="<?= $data['list_bantuan']['offset']; ?>" data-limit="<?= $data['list_bantuan']['limit']; ?>">Load More</a>
+                    </div>
+                </div>
+                <?php
+            }
+        ?>
     </div>
 </section>
 <!-- /End Services Area -->
