--- a/app/views/admin/bantuan/index.html
+++ b/app/views/admin/bantuan/index.html
@@ -1,4 +1,3 @@
-
 <div class="row">
     <div class="col-xl-3 col-md-6">
         <div class="card card-stats">
@@ -130,16 +129,16 @@
                             ?>
                         <tr>
                             <th scope="row">
-                                <div class="row align-items-center">
-                                    <div class="col-6 font-weight-bolder">
+                                <div class="row align-items-center flex-row">
+                                    <div class="col-8 font-weight-bolder overflow-hidden">
                                         <div class="media align-items-center">
-                                            <a href="#" data-id="<?= $data_bantuan->id_bantuan; ?>">
-                                                <span class="name mb-0 text-sm"><?= $data_bantuan->id_bantuan; ?></span><span class="ml-1"<?= (isset($data_bantuan->warna) ? ' style="color: '. $data_bantuan->warna .'"' : ''); ?>><?= $data_bantuan->nama ?></span>
+                                            <a href="#" data-id="<?= $data_bantuan->id_bantuan; ?>" class="d-flex flex-row">
+                                                <div class="name mb-0 text-sm"><?= $data_bantuan->id_bantuan; ?></div><div class="ml-1"<?= (isset($data_bantuan->warna) ? ' style="color: '. $data_bantuan->warna .'"' : ''); ?>><?= $data_bantuan->nama ?></div>
                                             </a>
                                         </div>
                                         <div class="text-black-50 small font-weight-bolder"><?= $data_bantuan->create_bantuan_at; ?></div>
                                     </div>
-                                    <div class="col-6 justify-content-end d-flex">
+                                    <div class="col justify-content-end d-flex">
                                         <div class="media align-items-center flex-column">
                                             <div class="badge badge-dot text-capitalize">
                                                 <i class="<?= $blokir['class']; ?> m-0"></i>
@@ -208,7 +207,7 @@
                                             <a class="dropdown-item font-weight-bold <?= ' '.$blokUnblock['class'];?>"
                                             href="/admin/bantuan/blok/<?= $data_bantuan->id_bantuan; ?>"><?= $blokUnblock['text']; ?></a>
                                         <?php } ?>
-                                        <?= ($data_bantuan->status == 'D' ? '<a class="dropdown-item font-weight-bold text-black-50" href="/admin/bantuan/take-down/<?= $data_bantuan->id_bantuan; ?>">Take Down</a>' : ''); ?>
+                                        <?= ($data_bantuan->status == 'D' ? '<a class="dropdown-item font-weight-bold text-black-50 token-last-param" href="/admin/bantuan/tutup/' . $data_bantuan->id_bantuan .'/'. $this->data['token'] .'">Take Down</a>' : ''); ?>
                                     </div>
                                 </div>
                             </td>
