memperbaiki data tampil kategori selesai dan sembunyikan sementara  verivikasi bantuan

--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -120,7 +120,7 @@
                                         x-placement="top-end">
                                         <a class="dropdown-item" href="/admin/bantuan/data/<?= $listDonasi->id_bantuan; ?>">Lihat Program Donasi</a>
                                         <!-- <a class="dropdown-item" href="#">Lihat Data Donatur</a> -->
-                                        <a class="dropdown-item<?= ($listDonasi->bayar == '1' ? ' disabled">Sudah Terverivikasi' : ' text-warning font-weight-bold" href="#">Verivikasi'); ?></a>
+                                        <!-- <a class="dropdown-item<?= ($listDonasi->bayar == '1' ? ' disabled">Sudah Terverivikasi' : ' text-warning font-weight-bold" href="#">Verivikasi'); ?></a> -->
                                     </div>
                                 </div>
                             </td>
